--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.4",
     "axios": "^1.1.2",
+    "concurrently": "^8.0.1",
     "craco-less": "^2.0.0",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
@@ -32,7 +33,8 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "server": "node ./src/server.js"
+    "server": "node ./src/server.js",
+    "dev": "concurrently \"yarn server\" \"yarn start\""
   },
   "eslintConfig": {
     "extends": [
