--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.23.4",
     "axios": "^1.1.2",
     "craco-less": "^2.0.0",
+    "dotenv": "^16.3.1",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
     "jwt-decode": "^3.1.2",
